--- a/index.html
+++ b/index.html
@@ -25,15 +25,31 @@
 
     <nav>
       <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#produtos">Produtos</a></li>
-        <li><a href="#preco">Preço</a></li>
-        <li><a href="#qualidade">Qualidade</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#products">Produtos</a></li>
+        <li><a href="#price">Preço</a></li>
+        <li><a href="#quality">Qualidade</a></li>
       </ul>
     </nav>
   </header>
 
-  <h1>Novos valores e <br> propriedades de CSS</h1>
+  <h1 class="introduction">Novos valores e <br> propriedades de CSS</h1>
+
+  <section class="about" id="about">
+    <div class="about-info">
+      <h1>Sobre</h1>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+    </div>
+
+    <div class="about-img">
+      <img src="./img/sobre1.jpg" alt="">
+    </div>
+
+    <div class="about-img">
+      <img src="./img/sobre2.jpg" alt="">
+    </div>
+  </section>
 </body>
 
 </html>
