--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <div class="super-info">
       <p>Seg / Sex 08:00 as 18:00</p>
       <a href="#">+55 21 99966-5555</a>
-      <p>Avenida Paulis, 3900, São Paulo - SP</p>
+      <p>Avenida Paulista, 3900, São Paulo - SP</p>
     </div>
   </div>
 
   <header class="menu-bg">
     <div class="menu">
       <div class="menu-logo"><a href="#">FlexBlog</a></div>
-    </div>
 
-    <nav>
-      <ul>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#products">Produtos</a></li>
-        <li><a href="#price">Preço</a></li>
-        <li><a href="#quality">Qualidade</a></li>
-      </ul>
-    </nav>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#products">Produtos</a></li>
+          <li><a href="#price">Preço</a></li>
+          <li><a href="#quality">Qualidade</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <h1 class="introduction">Novos valores e <br> propriedades de CSS</h1>
