--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
   </section>
 
   <footer class="footer">
-    <p>FlexBlog © Todos os direitos reservados.</p>
+    <div class="footer-content">
+      <p class="footer-text">FlexBlog © Todos os direitos reservados.</p>
+      <p class="footer-link">Desenvolvido por <a target="_blank" href="https://mateuspaula.dev/">Mateus de Souza</a></p>
+    </div>
   </footer>
 </body>
 
